// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > ./fixtures/define-expose.tsx 1`] = `
"
import { forwardRef as __MACROS_forwardRef } from "vue";
import { useImperativeHandle as __MACROS_useImperativeHandle } from "vue";export default __MACROS_forwardRef(function (__MACROS_props, __MACROS_ref) {
  __MACROS_useImperativeHandle(__MACROS_ref, () =>({
    foo: 1,
  }), [])
  return <div />
})
"
`;

exports[`fixtures > ./fixtures/define-model.tsx 1`] = `
"
import { useModel as __MACROS_useModel } from "/vue-macros/jsx-macros/use-model";export const Comp = ({ bar, ...__MACROS_props }: { bar: string }) => {
  const foo = __MACROS_useModel(__MACROS_props, 'foo', { default: bar })
  return <div>{foo.value}</div>
}

export default function (__MACROS_props) {
  const foo = $(__MACROS_useModel(__MACROS_props, 'foo'))
  return <div>{foo}</div>
}
"
`;

exports[`fixtures > ./fixtures/define-slots.tsx 1`] = `
"
import { getCurrentInstance as __MACROS_getCurrentInstance } from "vue";export const Comp = (__MACROS_props) => {
  const slots = Object.assign<{
    default: () => any
  }>({}, __MACROS_getCurrentInstance()?.slots)
  return <div>{slots.default()}</div>
}

export default function (__MACROS_props) {
  const slots = Object.assign({
    default: () => <div>default</div>,
  },__MACROS_getCurrentInstance()?.slots)
  return <div>{slots.default()}</div>
}
"
`;

exports[`fixtures > ./fixtures/setup-fc.tsx 1`] = `
"
import { useAttrs as __MACROS_useAttrs } from "vue";
import { useModel as __MACROS_useModel } from "/vue-macros/jsx-macros/use-model";const Comp = defineComponent(() => {
const __MACROS_props = __MACROS_useAttrs();
  const foo = __MACROS_useModel(__MACROS_props, 'foo')
  return () => {
    return <div>{[foo.value, __MACROS_props.bar]}</div>
  }
})

const SetupComp = defineSetupComponent(() => {
const __MACROS_props = __MACROS_useAttrs();
  return () => {
    return <div>{__MACROS_props.foo}</div>
  }
})

const SetupCompType: SetupFC = () => {
const __MACROS_props = __MACROS_useAttrs();
  return <div>{__MACROS_props.foo}</div>
}
"
`;

exports[`react fixtures > ./fixtures/define-expose.tsx 1`] = `
"
import { forwardRef as __MACROS_forwardRef } from "react";
import { useImperativeHandle as __MACROS_useImperativeHandle } from "react";export default __MACROS_forwardRef(function (__MACROS_props, __MACROS_ref) {
  __MACROS_useImperativeHandle(__MACROS_ref, () =>({
    foo: 1,
  }), [])
  return <div />
})
"
`;

exports[`react fixtures > ./fixtures/define-model.tsx 1`] = `
"
import { useModel as __MACROS_useModel } from "/vue-macros/jsx-macros/use-model";export const Comp = ({ bar, ...__MACROS_props }: { bar: string }) => {
  const foo = __MACROS_useModel(__MACROS_props, 'foo', { default: bar })
  return <div>{foo.value}</div>
}

export default function (__MACROS_props) {
  const foo = $(__MACROS_useModel(__MACROS_props, 'foo'))
  return <div>{foo}</div>
}
"
`;

exports[`react fixtures > ./fixtures/define-slots.tsx 1`] = `
"export const Comp = (__MACROS_props) => {
  const slots = Object.assign<{
    default: () => any
  }>({}, __MACROS_props.vSlots)
  return <div>{slots.default()}</div>
}

export default function (__MACROS_props) {
  const slots = Object.assign({
    default: () => <div>default</div>,
  },__MACROS_props.vSlots)
  return <div>{slots.default()}</div>
}
"
`;

exports[`react fixtures > ./fixtures/setup-fc.tsx 1`] = `
"
import { useAttrs as __MACROS_useAttrs } from "vue";
import { useModel as __MACROS_useModel } from "/vue-macros/jsx-macros/use-model";const Comp = defineComponent(() => {
const __MACROS_props = __MACROS_useAttrs();
  const foo = __MACROS_useModel(__MACROS_props, 'foo')
  return () => {
    return <div>{[foo.value, __MACROS_props.bar]}</div>
  }
})

const SetupComp = defineSetupComponent(() => {
const __MACROS_props = __MACROS_useAttrs();
  return () => {
    return <div>{__MACROS_props.foo}</div>
  }
})

const SetupCompType: SetupFC = () => {
const __MACROS_props = __MACROS_useAttrs();
  return <div>{__MACROS_props.foo}</div>
}
"
`;
